made ui changes on turnaround risk page

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -22,6 +22,9 @@
             <NavMenuSection Title="TURNAROUND RISK">
                 <NavMenuItem Icon="dashboard" Text="Dashboard" Href="/trdashboard" />
                 <NavMenuItem Icon="grid_view" Text="Turnaround Risk" Href="/turnaroundrisk" />
+            </NavMenuSection>
+
+            <NavMenuSection Title="REPORTS">
                 <NavMenuItem Icon="summarize" Text="Risk Summary Report" Href="/risksummary" />
                 <NavMenuItem Icon="compare_arrows" Text="Variance Report" Href="/variancereport" />
             </NavMenuSection>
